# catflow-edge

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cli11/: .clang-tidy
cmake/: arm-toolchain.cmake  clang-tidy.cmake
include/: yolo.h
src/: main.cpp  yolo.cpp
test/: test_inference.cpp  yolov5m.onnx  yolov5n.onnx
